log/build_2025-09-19_12-19-46/catchrobo_pkg/stderr.log
  File "/home/altair/catchrobo/install/catchrobo_pkg/lib/python3.10/site-packages/catchrobo_pkg/camera_node.py", line 26
    cv2.cvtColor(img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB) )                                                                                                                                                                                                                                                                                                                                                                                                                                                   img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                ^^^
SyntaxError: invalid syntax

